<resources>
    <string name="app_name">Almacenes GDO V2</string>

    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Traspasos</string>
    <string name="title_dashboard">Inventarios</string>
    <string name="title_notifications">Compras</string>

    <string name="codigo">Codigo</string>
    <string name="descripcion">Descripcion</string>
    <string name="unidad">Unidad</string>
    <string name="tipo_busqueda">Tipo busqueda</string>
    <string name="almaceno">Almacen origen</string>
    <string name="almacend">Almacen destino</string>
    <string name="cantidad">Cantidad</string>

    <string name="servername">http://www.distribuciongdo.site/conexiones/</string>

    <string name="seleccion">Selecciona Producto</string>
    <string name="movimientos">Movimientos</string>

    <string name="estantes">Estantes</string>

    <string-array name="estantes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>

</resources>