<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_mediano"
        android:layout_marginLeft="@dimen/separador_mediano"
        android:layout_marginEnd="@dimen/separador_mediano"
        android:layout_marginRight="@dimen/separador_mediano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estantes"
            android:textSize="@dimen/texto_grande"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/spEstantes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spEstantes" />

        <Spinner
            android:id="@+id/spEstantes"
            android:layout_width="@dimen/edt"
            android:layout_height="45dp"
            android:entries="@array/estantes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lBusquedaI"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/separador_mediano"
        android:layout_marginLeft="@dimen/separador_mediano"
        android:layout_marginTop="@dimen/separador_chico"
        android:layout_marginEnd="@dimen/separador_mediano"
        android:layout_marginRight="@dimen/separador_mediano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txvCodigoI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_mediano"
        android:layout_marginLeft="@dimen/separador_mediano"
        android:layout_marginTop="@dimen/separador_mediano"
        android:hint="@string/codigo"
        android:textSize="@dimen/texto_grande"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lBusquedaI" />

    <TextView
        android:id="@+id/txvDescripcionI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_mediano"
        android:layout_marginLeft="@dimen/separador_mediano"
        android:layout_marginTop="@dimen/separador_mediano"
        android:hint="@string/descripcion"
        android:textSize="@dimen/texto_grande"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvCodigoI" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_mediano"
        android:layout_marginLeft="@dimen/separador_mediano"
        android:layout_marginTop="@dimen/separador_mediano"
        android:layout_marginEnd="@dimen/separador_mediano"
        android:layout_marginRight="@dimen/separador_mediano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvDescripcionI">

        <EditText
            android:id="@+id/edtCantidadI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/codigo"
            android:inputType="numberSigned|number|numberDecimal"
            android:textSize="@dimen/texto_grande"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvUnidadI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/separador_chico"
            android:layout_marginLeft="@dimen/separador_chico"
            android:hint="@string/unidad"
            android:textSize="@dimen/texto_grande"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edtCantidadI"
            app:layout_constraintStart_toEndOf="@+id/edtCantidadI"
            app:layout_constraintTop_toTopOf="@+id/edtCantidadI" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnGuardarI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separador_grande"
        android:src="@drawable/ic_save_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnVerificarI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/separador_mediano"
        android:layout_marginRight="@dimen/separador_mediano"
        android:clickable="true"
        android:src="@drawable/ic_paste_search_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />
</androidx.constraintlayout.widget.ConstraintLayout>